# nishantjoshi00.github.io

./: .gitignore  Gemfile  Makefile  _config.yml  config.toml  index.html  robots.txt  search_index.en.js  sitemap.xml
_includes/: app.scss  disqus.html  footer.html  head.html
_layouts/: page.html  post.html
_pages/: 404.md
_posts/docs/: 2020-05-07-welcome-to-jekyll.markdown
_posts/info-blog/: 2020-05-01-wireguard.md  2020-05-05-disk-encryption.md  2020-05-20-handling-secure-boot.md  2020-05-30-using-tor-on-command-line-for-debian.md  2020-06-06-building-clis-with-c.md
_sass/components/: _post.scss
_sass/objects/: _grid.scss
_sass/settings/: _spaces.scss  _type.scss
blog/: index.html
blog/_layouts/: post.html
blog/_posts/: front-matter.yml
blog/college/: index.html
blog/lingual-odyssey/: index.html
content/: _index.md
content/blog/: 2024-01-01-lingual-odyssey.md  _index.md
css/: style.css
hosted/aimlabs/: index.html  index.js
hosted/content-1/: frames.html  index.css  index.html
hosted/dmust/: script.js
public/: index.html  search_index.en.js
public/css/: style.css
static/: style-dark.css  style-light.css
static/css/: style.css
tags/: index.html
tags/blog/: atom.xml  index.html
tags/booting/: atom.xml  index.html
tags/c/: atom.xml  index.html
tags/cli/: atom.xml  index.html
tags/cryptography/: atom.xml  index.html
tags/debian/: atom.xml  index.html
tags/filesystem/: atom.xml  index.html
templates/: footer.html
terminal-handler/: Cargo.toml  bio.txt  build.rs
terminal-handler/src/: lib.rs  utils.rs  vfs.rs
(+40 files in other folders)
