[package]
name = "terminal_handler"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }

[build-dependencies]
bincode = { version = "2.0.0", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.97"


[profile.release]
opt-level = "s"
lto = true
